--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "start":"node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines":{
+    "node": "14.x"
   },
   "dependencies": {
     "express": "^4.18.2",
