--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.4",
     "standard": "^17.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "toastify-js": "^1.12.0",
     "winston": "^3.13.0"
   }
