--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js --mode develop",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "mocha test/user.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^10.4.0",
     "nodemon": "^3.0.2"
   },
   "engines": {
