Se agrego supertest

--- a/.env.develop
+++ b/.env.develop
@@ -1,3 +1,4 @@
 MONGO_URL="mongodb+srv://tolo:tolo1239@cluster0.9cp6ccu.mongodb.net/ecommerce?retryWrites=true&w=majority"
 SECRET_KEY="coderhouse"   
 LOGGER="develop"
+BASE_URL="http://localhost:8080"
