--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "nodemon src/app.js --mode develop",
     "start": "node src/app.js",
-    "test": "mocha test/user.test.js"
+    "test": "mocha test/supertest.test.js --mode develop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^5.1.1",
     "mocha": "^10.4.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": "14.x"
