--- a/.env.develop
+++ b/.env.develop
@@ -2,3 +2,4 @@ MONGO_URL="mongodb+srv://tolo:tolo1239@cluster0.9cp6ccu.mongodb.net/ecommerce?re
 SECRET_KEY="coderhouse"   
 LOGGER="develop"
 BASE_URL="http://localhost:8080"
+PUERTO=8080
