--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "1erdesafio",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js --mode develop",
     "start": "node src/app.js --mode production",
