--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "nodemon": "^3.0.2",
     "supertest": "^7.0.0"
   },
-  "engines": {
-    "node": "14.x"
-  },
+  
+    "engines": {
+      "node": ">=14.0.0"
+    }
+  ,
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "bcrypt": "^5.1.1",
